<resources>
    <string name="app_name">Husky Helper</string>
    <string name="img_name">Husky Helper Icon</string>

    <!-- MainActivity Text -->
    <string name="greetingHeader">Welcome!</string>
    <string name="academicLabel">Academics</string>
    <string name="studyLabel">Studying</string>
    <string name="abtLabel">About Us</string>
    <string name="clubLabel">Clubs &amp; RSOs</string>

    <!-- RSOFragment Text -->
    <string name="husciiDevClub">HuSCII Developer Club</string>
    <string name="engineerClub">Engineers Without Borders</string>
    <string name="gameDevClub">Game Development Club</string>
    <string name="huskyClubInfo">
        Dive into the exciting world of coding and unlock your potential at our Husky Coding Club!
    </string>
    <string name="engineerClubInfo">

       Explore the fascinating realm of engineering and innovate with us at our club!
    </string>
    <string name="gameDevClubInfo">
        Embark on an epic journey of creativity and coding at our Game Development Club!
    </string>
    <string name="joinEngineer">Join</string>
    <string name="joinGame">Join</string>
    <string name="joinDev">Join</string>

    <!-- AboutActivity Text -->
    <string name="about_title">About Husky Helper</string>
    <string name="abt_txt1">Husky Helper is a mobile app developed in Android Studio for TCSS 450 in Spring quarter 2024.</string>
    <string name="abt_txt2">This app is intended to provide a collection of resources for UW Tacoma first-year students, with information on academic resources, RSOs and Clubs, studying spaces, and parking locations on campus.</string>
    <string name="abt_txt3">This app was made by Cecil Susi, Tammy Nguyen, and An Ha.</string>

    <!-- AcademicsActivity Text -->
    <string name="logo_alt_txt">Logo of App</string>
    <string name="academicsTitle">Academic Resources</string>
    <string name="classesLabel">Registration and Classes</string>
    <string name="educationLabel">Enhancing Your Education</string>
    <string name="financesLabel">Tuition and Finances</string>
    <string name="registerClassesLabel">Registering for Classes</string>

    <!-- ClassesFragment Text -->
    <string name="catalogLabel">General Course Catalog</string>
    <string name="timeScheduleLabel">Time Schedule</string>
    <string name="searchTSLabel">Search Time Schedule</string>
    <string name="advisingLabel">Academic Advising</string>

    <!-- FinancesFragment Text -->
    <string name="financialAidLabel">Financial Aid</string>
    <string name="tuitionLabel">Tuition</string>
    <string name="cashierLabel">Cashier\'s Office</string>

    <!-- EnhanceEdFragment Text -->
    <string name="publicationsLabel">Student Publications</string>
    <string name="tlcLabel">Teaching and Learning Center</string>
    <string name="techSupportLabel">Technology Support</string>
    <string name="careerLabel">Career Development</string>
    <string name="abroadLabel">Study Abroad</string>
    <string name="awardsLabel">Fellowships and Awards</string>
    <string name="bhsStudyRoomsLabel">BHS(2 Study rooms)</string>
    <string name="studyRoomTitle">Study Room</string>
    <string name="douStudyRoomLabel">Dougan(1 study room)</string>
    <string name="joyStudyRoomLabel">JOY(1 study rooms)</string>
    <string name="mlgStudyRoomLabel">MLG(6 study rooms)</string>
    <string name="cpStudyRoomLabel">Cherry Park(6 study rooms)</string>
    <string name="sciStudyRoomLabel">SCI(4 study rooms)</string>
    <string name="bhsStudyRoomTitle">BHS Study Room</string>
    <string name="bhs101">BHS 101</string>
    <string name="bhs105">BHS 105</string>
    <string name="mlgStudyRoomTitle">MLG Study Room</string>
    <string name="mlg305">MLG 305</string>
    <string name="mlg307">MLG 307</string>
    <string name="mlg315">MLG 315</string>
    <string name="mlg317">MLG 317</string>
    <string name="mlg321">MLG 321</string>
    <string name="mlg325">MLG 325</string>
    <string name="joyStudyRoomTitle">JOY Study Room</string>
    <string name="joy201">JOY 201</string>
    <string name="douStudyRoomTitle">DOU Study Room</string>
    <string name="dou174">DOU 174</string>
    <string name="cpStudyRoomTitle">CP Study Room</string>
    <string name="cp342B">CP 342B</string>
    <string name="cp342A">CP 342A</string>
    <string name="cp342C">CP 342C</string>
    <string name="cp3A">CP 3A</string>
    <string name="cp3B">CP 3B</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>